fixed overflow problems and implemented darkmode switch (look only)

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow-x: hidden;
+}
+
 .mirror {
   transform: scale(-1.8,1.8);
 }
